# mtc-android

./: LICENSE.md  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/github/windore/mtca/: MainActivity.java  MtcApplication.java  TaskTimerService.java
app/src/main/java/com/github/windore/mtca/mtc/: Event.java  Mtc.java  MtcItem.java  Task.java  Todo.java
app/src/main/java/com/github/windore/mtca/ui/: EventCheckReceiver.java
app/src/main/res/drawable/: ic_baseline_add_24.xml  ic_baseline_calendar_today_24.xml  ic_baseline_cancel_24.xml  ic_baseline_check_circle_outline_24.xml  ic_baseline_delete_forever_24.xml  ic_baseline_pause_24.xml  ic_baseline_play_arrow_24.xml  ic_baseline_sync_24.xml  ic_baseline_timer_24.xml  ic_launcher_foreground.xml  ic_mtc.xml  ic_mtc_icon.xml
app/src/main/res/layout/: activity_main.xml  dialog_add_event.xml  dialog_add_task.xml  dialog_add_todo.xml  dialog_get_password.xml  fragment_items.xml  fragment_sync.xml  view_shown_item.xml
app/src/main/res/menu/: bottom_nav_menu.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/values/: array_mtc_type.xml  array_shown_selection.xml  array_weekdays.xml  colors.xml  ic_launcher_background.xml  mtc_type_selection.xml  shown_selection.xml  strings.xml  themes.xml  weekday_selection.xml
gradle/wrapper/: gradle-wrapper.properties
mtc-android-rust/: .gitignore  Cargo.toml  THIRDPARTY.html  about.hbs  about.toml
mtc-android-rust/src/: lib.rs
(+7 files in other folders)
