[package]
name = "rustmtca"
version = "0.1.0"
edition = "2018"

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.19", default-features = false }

[lib]
name = "rustmtca"
crate-type = ["dylib"]

[dependencies]
# Vendored openssl for android
ssh2 = { version = "0.9", features = ["vendored-openssl"] }
mtc = { git = "https://github.com/Windore/mtc" }
chrono = { version = "0.4" }
num-traits = "0.2"
serde = { version = "1.0", default-features = false }
serde_json = "1.0"